--- a/AppInfrastructure/AppInfrastructure.csproj
+++ b/AppInfrastructure/AppInfrastructure.csproj
@@ -5,13 +5,24 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>LiteApp</PackageId>
-        <PackageVersion>0.0.1</PackageVersion>
+        <PackageVersion>0.0.2</PackageVersion>
         <Authors>JessJake</Authors>
         <Description>This package is created to help me and some people create different Wpf, Avalonia or other types apps.</Description>
-        <PackageIcon>Nuget.ico</PackageIcon>
+        <PackageIcon>Resources\Nuget.png</PackageIcon>
         <PackageTags>WPF</PackageTags>
         <RepositoryUrl>https://github.com/Htomsik/AppInfrastructure</RepositoryUrl>
-        <RepositoryType>Open</RepositoryType>
+        <RepositoryType>git</RepositoryType>
+        <PackageProjectUrl>https://github.com/Htomsik/AppInfrastructure</PackageProjectUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>LiteApp</Title>
+        <PackageLicenseUrl>https://github.com/Htomsik/AppInfrastructure/blob/master/LICENSE.MD</PackageLicenseUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Update="Resources\Nuget.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
+    </ItemGroup>
 
 </Project>
